--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/icons/flaticon.css">
-    <link rel="stylesheet" href="./css/media-queries.css">
+    <link rel="stylesheet" href="./App/css/main.css">
+    <link rel="stylesheet" href="./App/css/icons/flaticon.css">
+    <link rel="stylesheet" href="./App/css/media-queries.css">
 </head>
 <body class="home-body">
     <header>
